<resources>
    <string name="app_name">Patient</string>

    <string name="added_patient">Patiënt is toegevoegd</string>
    <string name="changed_patient">Patiënt is gewijzigd</string>
    <string name="removed_patient">Patiënt is veranderd</string>
    <string name="message_remove_patient">Weet u zeker dat u de Patiënt wilt verwijderen?</string>

    <string name="added_exercise">Oefening is toegevoegd</string>
    <string name="changed_exercise">Oefening is toegevoegd</string>
    <string name="removed_exercise">Oefening is Verwijderd</string>
    <string name="message_remove_exercies">Weet u zeker dat u de Exercise wilt verwijderen?</string>

    <string name="logged_in">U bent ingelogd</string>
    <string name="wrong_credentials">U heeft de verkeerde gegevens ingevuld</string>

    <string name="logged_out">U bent uitgelogd</string>
    <string name="message_logout">Weet u zeker dat u wilt uitloggen?</string>

    <string name="yes">Ja</string>
    <string name="no">Nee</string>
    <string name="ok">Ok</string>
    <string name="accept">Accepteren</string>

    <string name="email_will_be_send_to">Er wordt een nieuw wachtwoord verstuurd naar: </string>
    <string name="email_title">Inloggegevens Logopedieapp</string>
    <string name="email_greeting">Hi </string>
    <string name="email_body_part_1">Je nieuwe inloggegevens voor de Logopedieapp zijn: </string>
    <string name="email_body_part_2">Email: </string>
    <string name="email_body_part_3">Tijdelijk wachtwoord: </string>
    <string name="email_body_part_4">Bij de eerste keer inloggen kan je het wachtwoord veranderen </string>
    <string name="email_body_part_5">Met vriendelijke groet, </string>
    <string name="email_body_part_6">Logopedie </string>

    <string name="exercise">Opdracht</string>
    <string name="fill_exercise">Invullen opdracht</string>
    <string name="filled_in_exercises">Ingevulde opdrachten</string>

    <string name="upload_picture">Foto uploaden...</string>
    <string name="notification_will_be_removed">De notificatie verdwijnt als de foto is geupload</string>

    <string name="start_recording">start opnemen</string>
    <string name="stop_recording">stop opnemen</string>

    <string name="wrong_old_password">Uw oude wachtwoord is fout!</string>
    <string name="new_passwords_are_not_equal">Uw nieuwe wachtwoorden zijn niet hetzelfde!</string>
    <string name="incomplete_form">Niet alle velden zijn ingevuld</string>

    <!--login-->
    <string name="email">Email</string>
    <string name="password">Wachtwoord</string>
    <string name="login">Inloggen</string>
    <string name="forgot_password">Wachtwoord vergeten?</string>
    <string name="cancel">Annuleren</string>stanrost1996@gmail.com
    <string name="email_is_send_to">Email is verzonden naar:</string>
    <string name="email_is_wrong">Het email adres in onjuist</string>
    <string name="data_policy">Gegevensbeleid </string>
    <string name="data_policy_discription">Voor een correcte werking van de Logopedie applicatie, worden je persoonsgegevens binnen de applicatie verwerkt. De gegevens zijn alleen beschikbaar voor jou en jouw logopedist. Druk op accepteren om verder te gaan.</string>
    <!--exercise-->
    <string name="feedback_saved">Je feedback is opgeslagen</string>
    <!--change password-->
    <string name="old_password">Oud wachtwoord:</string>
    <string name="new_password">Nieuw wachtwoord:</string>
    <string name="repeat_new_password">Herhaling nieuw wachtwoord:</string>
    <string name="change_password">Wijzig wachwoord</string>
    <!--individual feedback--><!--fill exercise-->
    <string name="filled_in_date">Ingevulde datum:</string>
    <string name="date">Datum:</string>
    <string name="feedback_exercise">Hoe goed ging de opdracht:</string>
    <string name="result">Resultaat:</string>
    <string name="listen_recorded_voice">Luister ingesproken tekst</string>
    <string name="with_help">Gemaakt met hulp:</string>
    <string name="notes">Notities(van ouder)</string>
    <string name="make_picture">Maak foto van resultaat</string>
    <string name="voice_record">Spraakopname:</string>
    <string name="start">start</string>
    <string name="stop">stop</string>
    <string name="play">play</string>
    <!--settings-->
    <string name="change_password_settings">Verander wachtwoord</string>
    <string name="logout_settings">Uitloggen</string>
    <!--exercise tab-->
    <string name="exercise_id">Id:</string>
    <string name="exercise_name">Naam:</string>
    <string name="need_help">Heeft hulp nodig:</string>
    <string name="exercise_description">Beschrijving:</string>
    <string name="audio_instruction">Luister audio instructie</string>
    <string name="picture">Foto:</string>
    <!--menu-->

    <string name="settings">Instellingen</string>
    <string name="refresh">refresh</string>
</resources>
