<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/old_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvOldPassword" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/etOldpassword" />

    <TextView
        android:text="@string/new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvNewPassword" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/etNewPassword" />

    <TextView
        android:text="@string/repeat_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvNewPasswordCheck" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/etNewPasswordCheck" />

    <Button
        android:text="@string/change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnChangePassword" />

</LinearLayout>