<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.example.strost.patient.controller.activities.ExerciseActivity">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scrollview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/feedback_exercise" />

            <LinearLayout
                android:id="@+id/llPictures"
                android:layout_width="fill_parent"
                android:layout_height="70dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tvId"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivReallyHappy"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.0"
                    app:srcCompat="@drawable/pic_reallysad" />

                <ImageView
                    android:id="@+id/ivHappy"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.0"
                    app:srcCompat="@drawable/pic_sad" />

                <ImageView
                    android:id="@+id/ivNatural"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.0"
                    app:srcCompat="@drawable/pic_natural" />

                <ImageView
                    android:id="@+id/ivSad"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.0"
                    app:srcCompat="@drawable/pic_happy" />

                <ImageView
                    android:id="@+id/ivReallySad"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.0"
                    app:srcCompat="@drawable/pic_reallyhappy" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llRadioButtons"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/llPictures"
                android:orientation="horizontal">

                <RadioGroup
                    android:id="@+id/rgRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbReallyHappy"
                        android:layout_width="77dp"
                        android:layout_height="wrap_content"
                        android:checked="true" />

                    <RadioButton
                        android:id="@+id/rbHappy"
                        android:layout_width="77dp"
                        android:layout_height="wrap_content" />

                    <RadioButton
                        android:id="@+id/rbNatural"
                        android:layout_width="77dp"
                        android:layout_height="wrap_content" />

                    <RadioButton
                        android:id="@+id/rbSad"
                        android:layout_width="77dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <RadioButton
                        android:id="@+id/rbReallySad"
                        android:layout_width="77dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />
                </RadioGroup>

            </LinearLayout>

            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/llRadioButtons"
                android:layout_marginTop="12dp"
                android:text="@string/result" />

            <ImageView
                android:id="@+id/ivPreviewImage"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:layout_alignTop="@+id/tvName"
                android:layout_toRightOf="@+id/btnTakePicture"
                android:layout_toEndOf="@+id/btnTakePicture" />

            <Button
                android:id="@+id/btnTakePicture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/make_picture"
                android:layout_below="@+id/tvName"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:id="@+id/tvRecord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/voice_record"
                android:layout_below="@+id/btnTakePicture"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recordlayout"
                android:layout_below="@+id/tvRecord"
                >

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnStart"
                    android:text="@string/start"
                    android:layout_weight="1.0"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnStop"
                    android:text="@string/stop"
                    android:layout_weight="1.0"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnPlay"
                    android:text="@string/play"
                    android:layout_weight="1.0"/>

            </LinearLayout>


            <TextView
                android:id="@+id/tvWithHelp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/recordlayout"
                android:layout_marginTop="17dp"
                android:text="@string/with_help" />

            <Switch
                android:id="@+id/swtchGotHelp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/tvWithHelp"
                android:layout_alignBottom="@+id/tvWithHelp"
                android:layout_toRightOf="@+id/btnTakePicture"
                android:layout_toEndOf="@+id/btnTakePicture" />

            <TextView
                android:id="@+id/tvPatientNotes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/swtchGotHelp"
                android:layout_marginTop="35dp"
                android:text="@string/notes" />

            <EditText
                android:id="@+id/etCaregiverNote"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_below="@+id/tvPatientNotes"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:minLines="6" />

            <ProgressBar
                android:id="@+id/pbLoadingImage"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/ivPreviewImage"
                android:layout_alignStart="@+id/ivPreviewImage"
                android:layout_alignTop="@+id/tvName"
                android:visibility="invisible" />



        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabAddFeedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="end|bottom"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:src="@drawable/ic_file_upload"
        />

</RelativeLayout>
